second commit, added authentication and templates